# textX-LS

./: .bandit  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  azure-pipelines.yml  flake.nix  requirements.txt
azure-devops/: README.md
azure-devops/builds/json-exported/: [textX-LS-Linux] Build and test.json  [textX-LS-Windows] Build and test.json  [textX-LS-macOS] Build and test.json
azure-devops/builds/yaml/: azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-windows.yml
azure-devops/releases/: [textX-LS-macOS] Release.json
client/: .gitignore  .vscodeignore  README.md  make_package.sh  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
client/snippets/: textxfile.json
client/src/: constants.ts  extension.ts  interfaces.ts  inversify.config.ts  python.ts  setup.ts  types.ts  utils.ts
client/src/scaffolding/: languageScaffolding.ts
client/src/services/: eventService.ts  extensionService.ts  generatorService.ts  index.ts  languageService.ts  projectService.ts  syntaxHighlightService.ts  syntaxHighlightingService.ts  watcherService.ts
client/src/ui/explorer/: generatorConfigNode.ts  generatorNode.ts  index.ts  (+7 more)
client/syntaxes/: textx.json  textxfile.json
client/wheels/: requirements-dev.txt  requirements.txt
examples/: README.md
examples/images/: types_data_flow.pu  types_data_flow2.pu
examples/multimetamodel/: .gitignore  README.md  temp.sh
examples/multimetamodel/02_shared_grammar/: setup.py
examples/multimetamodel/03_non_textx_models/: README.md
examples/multimetamodel/images/: json_ref_dsl.pu  types_data_flow_01.pu  types_data_flow_02.pu
examples/multimetamodel01_shared_grammar/: README.md
examples/multimetamodel01_shared_grammar/tests/: test_metamodel.py
examples/multimetamodel01_shared_grammar/types_data_flow_dsls/: __init__.py
examples/multimetamodel02_separate_packages/data_dsl/: README.md  requirements_dev.txt  setup.py
examples/multimetamodel02_separate_packages/flow_codegen/: .gitignore
examples/multimetamodel02_separate_packages/flow_dsl/: README.md  setup.py
examples/multimetamodel02_separate_packages/types_dsl/: README.md
examples/multimetamodel03_non_textx_models/: setup.py
examples/multimetamodel03_non_textx_models/json_ref_dsl/: JsonRef.tx  __init__.py
examples/multimetamodel03_non_textx_models/tests/: test_json_ref_dsl.py
examples/robot/: pyproject.toml  setup.py
examples/robot/tx_robot/: __init__.py
examples/workflow/: TextXFile  example.wf  pyproject.toml  setup.py
examples/workflow/textx_ls_workflow/: __init__.py
examples/workflow/tx_workflow/: __init__.py  workflow.tx
textX-LS/core/: .coveragerc  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
textX-LS/core/tests/: test_completions.py  test_languages.py  test_placeholder.py  test_utils.py
textX-LS/core/tests/features/: conftest.py  grammar.tx  test_validate.py
textX-LS/core/textx_ls_core/: __init__.py  exceptions.py  models.py  utils.py
textX-LS/core/textx_ls_core/cli/: __init__.py  langs.py
textX-LS/core/textx_ls_core/features/: completions.py  generators.py  lang_manager.py  languages.py  projects.py  scaffolding.py  validate.py
textX-LS/core/textx_ls_core/generators/scaffolding/: __init__.py
textX-LS/core/textx_ls_core/generators/scaffolding/templates/textx-language/: setup.py.template
textX-LS/core/textx_ls_core/generators/scaffolding/templates/textx-language/project_name/: grammar.tx.template
textX-LS/core/textx_ls_core/generators/scaffolding/templates/textx-language/tx_package_name/: __init__.py.template
textX-LS/core/textx_ls_core/languages/: __init__.py
textX-LS/core/textx_ls_core/languages/textx/: __init__.py  grammar.tx
textX-LS/core/textx_ls_core/languages/textxfile/: __init__.py  grammar.tx
textX-LS/core/textx_ls_core/templates/: __init__.py
textX-LS/core/textx_ls_core/templates/textx-language/: setup.py.template
textX-LS/core/textx_ls_core/templates/textx-language/lang_name/: __init__.py.template  grammar.tx
textX-LS/server/: .coveragerc  CHANGELOG.md  README.md  pyproject.toml  run_server.sh  setup.py
textX-LS/server/tests/: test_utils.py
textX-LS/server/tests/integration/: __init__.py  conftest.py  lsp.py
textX-LS/server/tests/integration/features/: test_diagnostics.py
textX-LS/server/tests/integration/test_workspace/: Textxfile  __init__.py  bad.textxfile
textX-LS/server/tests/unit/features/: test_diagnostics.py
textX-LS/server/textx_ls_server/: __main__.py  config.py  protocol.py  server.py  utils.py
textX-LS/server/textx_ls_server/features/: diagnostics.py
textx-lang/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
textx-lang/src/: extension.ts  interfaces.ts  inversify.config.ts  setup.ts  utils.ts
textx-lang/src/services/: generatorService.ts  projectService.ts  syntaxHighlightService.ts
(+31 files in other folders)
