[project]
name = "textx-ls-core"
version = "0.3.0"
description = "a core language server logic for domain specific languages based on textX"
authors = [
    {name = "Daniel Elero", email = "danixeee@gmail.com"},

]
maintainers = [
    {name = "Milan Šović", email="milan_sovic@outlook.com"},
    {name = "Daniel Elero", email = "danixeee@gmail.com"},
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["textX", "DSL", "domain-specific languages"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textX>=4.0.1",
    "wheel_inspect==1.7.1",
    "tomli>=2.3.0; python_version < \"3.11\"",
]

[project.urls]
Homepage = "https://github.com/textX/textX-LS/core"

[project.optional-dependencies]
dev = ["bandit==1.7.9", "black==24.4.2", "flake8==7.0.0", "textx_gen_vscode>=0.2.2"]
test = ["coverage==7.5.3", "pytest==8.2.2", "pytest-cov==5.0.0"]
vscode = ["textx_gen_vscode>=0.2.2"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
