[project]
name = "textx-ls-server"
version = "0.2.0"
description = "a language server for domain specific languages based on textX"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Daniel Elero", email = "danixeee@gmail.com"},
]
maintainers = [
    {name = "Milan Šović", email="milan_sovic@outlook.com"},
    {name = "Daniel Elero", email = "danixeee@gmail.com"},
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
keywords = ["textX", "DSL", "domain-specific languages", "language server protocol", "pygls"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pygls==1.3.1",
    "lsprotocol==2023.0.1",
    "textx>=4.0.1",
    "textx-ls-core>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/textX/textX-LS/server"

[project.optional-dependencies]
dev = ["bandit==1.7.9", "flake8==7.0.0"]
test = ["coverage==7.5.3", "mock==5.1.0", "pytest==8.2.2", "pytest-cov==5.0.0"]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]
